Fix color of background and scrollbar.

--- a/src/components/CalendarEvent.module.css
+++ b/src/components/CalendarEvent.module.css
@@ -23,7 +23,7 @@
 .eventInfoContainer {
     width: 100%;
     height: 59%;
-    background-color: white;
+    background-color: #FFFCF7;
     padding: 0.5em 0.75em 0.5em 1em;
     box-sizing: border-box;
     border-radius: 0px 0px 12px 12px;
@@ -33,7 +33,7 @@
     height: 100%;
     overflow-y: auto;
     scrollbar-width: thin;
-    scrollbar-color: light transparent;
+    scrollbar-color: #f1eadfe5 transparent;
 }
 
 .eventDescription {
